--- a/countDown/countDown.css
+++ b/countDown/countDown.css
@@ -37,3 +37,24 @@
 .countdown p span:first-of-type{
   font-weight: 700;
 }
+
+
+@media all and (max-width: 900px){
+  .countdown{font-size: 350%;}
+  .countdown p{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media all and (max-width: 760px){
+  .countdown{flex-wrap: wrap;}
+  .countdown p{
+    width: 50%;
+    padding: 2rem;
+  }
+}
+
+@media all and (max-width: 420px){
+  .countdown{font-size: 200%;}
+}
