--- a/shoppingList/style.css
+++ b/shoppingList/style.css
@@ -18,10 +18,40 @@ header, footer{
 header{
   background-color: #28b9b5;
 }
-#add{
+#add {
   background-color: #e5e5e5;
   text-align: center;
   padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#add form {
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#add .form-group{
+  display: flex;
+  padding: 0.25rem;
+}
+#add form input, #add form select, #add form button{
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid #c8c8c8;
+}
+#add form button{
+  border-width: 4px;
+  cursor: pointer;
+  background-color: #28b9b5;
+  color: #fff;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 #show{
