--- a/flagQuiz/style.css
+++ b/flagQuiz/style.css
@@ -1,20 +1,38 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 400;
 }
-a{
+
+a {
   text-decoration: none;
   display: inline-block;
 }
-ul{list-style: none;}
-img{  width: 100%;}
-body{  background-color: #c4c4c1;}
-h1,h2,h3,h4,h5,h6{font-weight: 700;}
 
-#quiz-container{
+ul {
+  list-style: none;
+}
+
+img {
+  width: 100%;
+}
+
+body {
+  background-color: #c4c4c1;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+
+#quiz-container {
   padding: 1.5rem;
   background-color: #fff;
   margin: 2rem auto;
@@ -22,16 +40,19 @@ h1,h2,h3,h4,h5,h6{font-weight: 700;}
   border-radius: 0.25rem;
   box-shadow: 2px 2px 2px 2px rgb(255 255 255 / 40%);
 }
-.heading{
+
+.heading {
   margin: 1rem 0;
   text-align: center;
 }
+
 .question-counter {
   border-bottom: 8px solid #c6c4c4;
   position: relative;
   height: 10px;
   font-weight: 700;
 }
+
 .question-counter .count {
   content: '';
   position: absolute;
@@ -46,23 +67,28 @@ h1,h2,h3,h4,h5,h6{font-weight: 700;}
   justify-content: center;
   align-items: center;
 }
-.questions{
+
+.questions {
   display: flex;
   align-items: center;
   margin: 2rem 0;
 }
-.questions .question{
+
+.questions .question {
   width: 35%;
 }
-.questions .options{
+
+.questions .options {
   width: 60%;
   margin-left: 5%;
 }
-.questions .options ul{
+
+.questions .options ul {
   display: flex;
   flex-wrap: wrap;
 }
-.questions .options ul li{
+
+.questions .options ul li {
   width: 47%;
   margin: 1%;
   padding: 1rem;
@@ -72,10 +98,12 @@ h1,h2,h3,h4,h5,h6{font-weight: 700;}
   position: relative;
   transition: all 0.25s ease-in;
 }
-.questions .options ul li:hover{
+
+.questions .options ul li:hover {
   background-color: #b6b2b2ab;
 }
-.questions .options ul li:before{
+
+.questions .options ul li:before {
   position: absolute;
   left: 0;
   top: 0;
@@ -86,7 +114,52 @@ h1,h2,h3,h4,h5,h6{font-weight: 700;}
   justify-content: center;
   align-items: center;
 }
-.questions .options ul li:first-of-type:before{content: 'a)';}
-.questions .options ul li:nth-of-type(2):before{content: 'b)';}
-.questions .options ul li:nth-of-type(3):before{content: 'c)';}
-.questions .options ul li:last-of-type:before{content: 'd)';}
+
+.questions .options ul li:first-of-type:before {
+  content: 'a)';
+}
+
+.questions .options ul li:nth-of-type(2):before {
+  content: 'b)';
+}
+
+.questions .options ul li:nth-of-type(3):before {
+  content: 'c)';
+}
+
+.questions .options ul li:last-of-type:before {
+  content: 'd)';
+}
+
+
+
+@media all and (max-width: 768px) {
+  #quiz-container{width: 100%;}
+  .questions {
+    flex-wrap: wrap;
+  }
+
+  .questions .question,
+  .questions .options {
+    width: 100%;
+    text-align: center;
+  }
+  .questions .question{
+    margin-bottom: 2rem;
+  }
+  .questions .question img{
+    max-width: 250px;
+  }
+}
+
+@media all and (max-width: 476px) {
+  .questions .options{
+    margin-left: 0;
+  }
+  .questions .options ul{
+    flex-wrap: wrap;
+  }
+  .questions .options ul li{
+    width: 100%;
+  }
+}
