--- a/memory-game-js/style.css
+++ b/memory-game-js/style.css
@@ -1,5 +1,87 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+
+
+body{
+  background-color: #86ada0;
+}
+#wrapper > h1{text-align: center;}
+
+#game {
+  background-color: #073c08;
+  display: none;
+  width: 60%;
+  margin: 2rem auto;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 3px 4px rgb(0 0 0 / 16%), 1px 1px 2px 2px rgb(0 0 0 / 0%);
+}
+#game-container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+#game-board{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 22%;
+  height: 150px;
+  margin: 0.5rem;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+.flip-card *{
+  width: 100%;
+  height: 100%;
+}
+
+/* This container is needed to position the front and back side */
+.inner {
+  position: relative;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+/* .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+} */
+
+/* Position the front and back side */
+.front,
+.back {
+  position: absolute;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.back {
+  color: white;
+  transform: rotateY(180deg);
+}
+.back img{
+  border: 1px solid #f1f1f1;
+  padding: 0.15rem;
+}
+
+.flip-card img {
+  aspect-ratio: 3/4;
 }
