--- a/memory-game-js/style.css
+++ b/memory-game-js/style.css
@@ -2,14 +2,40 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-
-
-body{
+body {
   background-color: #86ada0;
 }
-#wrapper > h1{text-align: center;}
+#start {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+#startBtn {
+  text-decoration: none;
+  display: inline-block;
+  background-color: #fff;
+  color: #000;
+  padding: 1rem 3rem;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 1rem;
+  border: 2px solid #000;
+  transition: all 0.45s;
+  box-shadow: 1px 3px 1px 3px rgba(0, 0, 0, 0.4),
+    1px 3px 2px 3px rgb(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+#startBtn:hover {
+  box-shadow: none;
+  transform: translate(1px, 3px);
+}
+#wrapper > h1 {
+  text-align: center;
+}
 
 #game {
   background-color: #073c08;
@@ -27,61 +53,46 @@ body{
   display: flex;
   flex-wrap: wrap;
 }
-#game-board{
+#game-board {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
-
 .flip-card {
   background-color: transparent;
   width: 22%;
   height: 150px;
   margin: 0.5rem;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px;
 }
-.flip-card *{
+.flip-card * {
   width: 100%;
   height: 100%;
 }
-
-/* This container is needed to position the front and back side */
 .inner {
   position: relative;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-/* .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-} */
-
-/* Position the front and back side */
 .front,
 .back {
   position: absolute;
-  -webkit-backface-visibility: hidden; /* Safari */
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-
-/* Style the front side (fallback if image is missing) */
 .front {
   background-color: #bbb;
   color: black;
 }
-
-/* Style the back side */
 .back {
   color: white;
   transform: rotateY(180deg);
 }
-.back img{
+.back img {
   border: 1px solid #f1f1f1;
   padding: 0.15rem;
 }
-
 .flip-card img {
   aspect-ratio: 3/4;
 }
