--- a/memory-game-js/style.css
+++ b/memory-game-js/style.css
@@ -19,7 +19,7 @@ body {
   display: inline-block;
   background-color: #fff;
   color: #000;
-  padding: 1rem 3rem;
+  padding: 1rem 2rem;
   border-radius: 20px;
   font-weight: bold;
   font-size: 1rem;
@@ -47,7 +47,7 @@ body {
   box-shadow: 0 0 3px 4px rgb(0 0 0 / 16%), 1px 1px 2px 2px rgb(0 0 0 / 0%);
 }
 #game-container {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   padding: 1rem;
   display: flex;
@@ -56,6 +56,7 @@ body {
 #game-board {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
   width: 100%;
 }
 .flip-card {
@@ -95,4 +96,24 @@ body {
 }
 .flip-card img {
   aspect-ratio: 3/4;
+}
+
+@media all and (max-width: 1100px){
+  #game{
+    width: 80%;
+  }
+}
+@media all and (max-width: 800px){
+  #game{
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding: 0;
+  }
+}
+@media all and (max-width: 600px){
+  .flip-card{
+    width: 46%;
+    height: 200px;
+  }
 }
