--- a/memory-game-js/style.css
+++ b/memory-game-js/style.css
@@ -63,7 +63,7 @@ body {
   background-color: transparent;
   width: 22%;
   height: 150px;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   perspective: 1000px;
 }
 .flip-card * {
@@ -114,6 +114,6 @@ body {
 @media all and (max-width: 600px){
   .flip-card{
     width: 46%;
-    height: 200px;
+    height: 50vh;
   }
 }
