--- a/productSlider.css
+++ b/productSlider.css
@@ -8,7 +8,7 @@
     height: 100vh;
     background-color: beige;
 }
-#wrapper, #slider .content{
+#wrapper, #slider .loader, #slider .content{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,24 +18,40 @@
     width: 60vw;
     min-width: 250px;
     max-width: 750px;
+    min-height: 400px;
+    max-height: 600px;
+    height: 50vh;
     margin: 0 auto;    
     background-color: #fff;
     border-radius: 1rem;
     box-shadow: 0 0 4px 6px #cccccccf;
     position: relative;
 }
+#slider .loader{
+    width: 100%;
+    height: 100%;
+}
 #slider .content{
     display: none;
+    height: 100%;
 }
 #slider .left{
     width: 35%;
     margin-right: 3%;
 }
-#slider .right{
+#slider .right {
     width: 60%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
 }
 #slider img{
     width: 100%;
+    object-fit: contain;
+}
+#slider .content div, #slider img{
+    height: 100%;
 }
 #slider .nav button {
     position: absolute;
@@ -57,4 +73,12 @@
 }
 #slider .nav button:last-of-type{
     right: -2%;
+}
+
+
+
+@media all and (max-width: 1200px){
+    #slider{
+        width: 70vw;
+    }
 }
