--- a/priceSlider/style.css
+++ b/priceSlider/style.css
@@ -3,10 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-#wrapper{
+body{
+    background-color: bisque;
     height: 100vh;
+}
+#wrapper{
     width: 70%;
     margin: 2rem auto;
+    background-color: #fff;    
+    padding: 2rem;
 }
 .priceSlider{
     position: relative;
@@ -28,14 +33,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;    
 }
 .price{
+    background-color: aqua;
     width: 30%;
+    margin: 1%;
+    padding: 1%;
 }
 .price.disabled{
     pointer-events: none;
-    
+    background-color: #666;
 }
 .price.disabled:hover{
     cursor: none;
