--- a/memory-game-js/style.css
+++ b/memory-game-js/style.css
@@ -33,16 +33,21 @@ body {
   box-shadow: none;
   transform: translate(1px, 3px);
 }
-#wrapper > h1 {
+#wrapper > h1,
+#wrapper > h4 {
   text-align: center;
+  margin-bottom: 1rem;
+}
+#wrapper > h4 span {
+  color: rgb(129, 51, 51);
 }
 
 #game {
   background-color: #073c08;
   display: none;
-  width: 60%;
+  width: 65%;
   margin: 2rem auto;
-  padding: 1rem;
+  padding: 1rem 3rem 1rem 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0 3px 4px rgb(0 0 0 / 16%), 1px 1px 2px 2px rgb(0 0 0 / 0%);
   position: relative;
@@ -111,6 +116,24 @@ body {
   border-radius: 50%;
   background: #000;
   font-weight: 900;
+}
+
+#clickCounter {
+  position: absolute;
+  top: 3.5rem;
+  right: 0.5rem;
+  font-weight: 900;
+  color: #fff;
+  text-align: center;
+}
+#clickCounter span {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: #b41e1e;
 }
 
 @media all and (max-width: 1100px) {
