--- a/memory-game-js/style.css
+++ b/memory-game-js/style.css
@@ -119,6 +119,7 @@ body {
 }
 
 #clickCounter {
+  display: none;
   position: absolute;
   top: 3.5rem;
   right: 0.5rem;
@@ -134,6 +135,9 @@ body {
   align-items: center;
   border-radius: 50%;
   background: #b41e1e;
+}
+#over{
+  display: none;
 }
 
 @media all and (max-width: 1100px) {
