--- a/drumkit/style.css
+++ b/drumkit/style.css
@@ -56,6 +56,7 @@ a {
   cursor: pointer;
   text-align: center;
   transition: all 0.35s ease;
+  position: relative;
 }
 .box:hover{
   background-color: blanchedalmond;
@@ -65,4 +66,16 @@ a {
   height: 150px;
   object-fit: contain;
   mix-blend-mode: multiply;
+}
+.box .key{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+  font-weight: bold;
 }
