--- a/quiz/style.css
+++ b/quiz/style.css
@@ -40,7 +40,7 @@
     box-shadow: 2px 2px 1px 2px rgba(0,0,0,0.4);
     background-color: #000 !important;
 }
-.question .photo{
+.question .photo, #options .photo{
     width: 150px;
     border: 1px solid;
     padding: 0.5rem;
