--- a/notesTakingApp/notes.css
+++ b/notesTakingApp/notes.css
@@ -67,18 +67,60 @@ h6 {
   flex-wrap: wrap;
 }
 .note {
-  border-radius: 5px;
-  padding: 10px;
-  padding-right: 20px;
+  border-radius: 10px;
   position: relative;
-  width: 150px;
+  width: 250px;
   height: 80px;
+  overflow: hidden;
+  scrollbar-color: rgba(0, 0, 0, 0.8) rgba(255, 255, 255, 0.2);
+  scrollbar-width: none;
+}
+.content {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
   overflow: auto;
 }
 .note p {
   font-size: 14px;
 }
-.close {
+.actions,
+.timestamp {
+  position: absolute;
+  font-size: 11px;
+  transition: all 400ms linear;
+}
+.actions {
+  top: -100%;
+  right: 0;
+  padding: 5px;
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.5);
+}
+.actions i {
+  color: #fff;
+  cursor: pointer;
+}
+.timestamp {
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 0 10px;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+}
+.note:hover .timestamp {
+  bottom: 0;
+}
+.note:hover .actions {
+  top: 0;
+}
+/* .close {
   position: absolute;
   top: 5px;
   right: 5px;
@@ -90,7 +132,7 @@ h6 {
   right: 5px;
   cursor: pointer;
   font-size: 10px;
-}
+} */
 .undo {
   position: absolute;
   top: 10px;
@@ -99,10 +141,4 @@ h6 {
 }
 .input {
   width: 100%;
-}
-.timestamp {
-  font-size: 10px;
-  position: absolute;
-  bottom: 4px;
-  left: 4px;
 }
